Devall Feedback Extension commits

--- a/Devall/CustomerFeedback/view/frontend/email/feedback_notification.html
+++ b/Devall/CustomerFeedback/view/frontend/email/feedback_notification.html
@@ -3,7 +3,8 @@ Feedback Notification Email Template
 
 This email template is designed to notify the store owner when new feedback has been submitted by a customer. It includes details such as the product ID, feedback title and content, customer information, and whether the feedback was submitted anonymously.
 
-Author: Devall
+Author: Developers-Alliance team
+Copyright Copyright (c) 2024 Developers-alliance (https://www.developers-alliance.com)
 Website: https://developers-alliance.com
 Package: Devall_CustomerFeedback
 Version: 1.0.0
