--- a/Devall/CustomerFeedback/view/frontend/layout/catalog_product_view.xml
+++ b/Devall/CustomerFeedback/view/frontend/layout/catalog_product_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
     Layout Configuration for Customer Feedback Form
-    Author: Devall
+    Author: Developers-Alliance team
+    @copyright Copyright (c) 2024 Developers-alliance (https://www.developers-alliance.com)
     Website: https://developers-alliance.com
     Package: Devall_CustomerFeedback
     Version: 1.0.0
