--- a/Devall/CustomerFeedback/view/frontend/templates/feedbackform.phtml
+++ b/Devall/CustomerFeedback/view/frontend/templates/feedbackform.phtml
@@ -5,7 +5,8 @@
  * This template renders the customer feedback form within the product details page.
  * It initializes the JavaScript component for feedback submission and handles conditional rendering based on the module's configuration.
  *
- * @author Devall
+ * @author Developers-Alliance team
+ * Copyright (c) 2024 Developers-alliance (https:// www. developers-alliance. com)
  * @website https://developers-alliance.com
  * @package Devall_CustomerFeedback
  * @version 1.0.0
