--- a/Devall/CustomerFeedback/view/frontend/web/template/feedback-form.html
+++ b/Devall/CustomerFeedback/view/frontend/web/template/feedback-form.html
@@ -5,7 +5,8 @@ This section includes the introductory text for the feedback form, the toggle bu
 The form allows customers to submit their feedback on products, suggestions for improvement, or other insights. It supports submitting feedback anonymously.
 The visibility of the form and submission handling are managed via KnockoutJS bindings.
 
-Author: Devall
+Author: Developers-Alliance team
+Copyright Copyright (c) 2024 Developers-alliance (https://www.developers-alliance.com)
 Website: https://developers-alliance.com
 Package: Devall_CustomerFeedback
 Version: 1.0.0
