--- a/Devall/CustomerFeedback/view/adminhtml/layout/customerfeedback_feedback_index.xml
+++ b/Devall/CustomerFeedback/view/adminhtml/layout/customerfeedback_feedback_index.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <!--
     Layout Configuration for Customer Feedback Grid in Admin
-    Author: Devall
+    Author: Developers-Alliance team
+    @copyright Copyright (c) 2024 Developers-alliance (https://www.developers-alliance.com)
     Website: https://developers-alliance.com
     Package: Devall_CustomerFeedback
     Version: 1.0.0
