Devall Feedback Extension commit

--- a/Devall/CustomerFeedback/view/frontend/templates/feedbackform.phtml
+++ b/Devall/CustomerFeedback/view/frontend/templates/feedbackform.phtml
@@ -6,7 +6,7 @@
  * It initializes the JavaScript component for feedback submission and handles conditional rendering based on the module's configuration.
  *
  * @author Developers-Alliance team
- * Copyright (c) 2024 Developers-alliance (https:// www. developers-alliance. com)
+ * @Copyright (c) 2024 Developers-alliance (https:// www. developers-alliance. com)
  * @website https://developers-alliance.com
  * @package Devall_CustomerFeedback
  * @version 1.0.0
