--- a/Devall/CustomerFeedback/view/adminhtml/templates/customerfeedback/footer.phtml
+++ b/Devall/CustomerFeedback/view/adminhtml/templates/customerfeedback/footer.phtml
@@ -5,7 +5,7 @@
  * This section renders the custom footer content for the website, including copyright and contact information. It encourages users to reach out for customization and feedback via email.
  *
  * @author Developers-Alliance team
- * Copyright (c) 2024 Developers-alliance (https:// www. developers-alliance. com)
+ * @Copyright (c) 2024 Developers-alliance (https:// www. developers-alliance. com)
  * @website https://developers-alliance.com
  * @package Devall_CustomerFeedback
  * @version 1.0.0
