--- a/Devall/CustomerFeedback/view/frontend/web/template/feedback-form.html
+++ b/Devall/CustomerFeedback/view/frontend/web/template/feedback-form.html
@@ -6,7 +6,7 @@ The form allows customers to submit their feedback on products, suggestions for 
 The visibility of the form and submission handling are managed via KnockoutJS bindings.
 
 Author: Developers-Alliance team
-Copyright Copyright (c) 2024 Developers-alliance (https://www.developers-alliance.com)
+Copyright: Copyright (c) 2024 Developers-alliance (https://www.developers-alliance.com)
 Website: https://developers-alliance.com
 Package: Devall_CustomerFeedback
 Version: 1.0.0
