Devall Feedback Extension js modify commitss

--- a/Devall/CustomerFeedback/view/frontend/templates/feedbackform.phtml
+++ b/Devall/CustomerFeedback/view/frontend/templates/feedbackform.phtml
@@ -32,8 +32,7 @@ if ($viewModel->isFeedbackEnabled()): ?>
                     "components": {
                         "feedbackComponent": {
                             "component": "Devall_CustomerFeedback/js/feedback-component",
-                            "productId": "<?= $block->escapeJs($productViewBlock->getProduct()->getId()) ?>",
-                        "formKey": "<?= $block->escapeJs($viewModel->getFormKey()) ?>"
+                            "productId": "<?= $block->escapeJs($productViewBlock->getProduct()->getId()) ?>"
                     }
                 }
             }
